# python-project-52

./: .env.example  Dockerfile  Makefile  README.md  __init__.py  docker-compose.yml  fixture.json  pyproject.toml  setup.cfg
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  forms.py  mixins.py  services.py  settings.py  urls.py  validator.py  views.py
task_manager/labels/: asgi.py  forms.py  models.py  services.py  test.py  urls.py  views.py  wsgi.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_labels_name.py
task_manager/statuses/: asgi.py  forms.py  models.py  services.py  test.py  urls.py  views.py  wsgi.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  services.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasks_executor.py  0003_alter_tasks_labels.py
task_manager/templates/: index.html  layout.html  login.html  navigation.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/statuses/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  index.html  task.html  update.html
task_manager/templates/users/: create.html  delete.html  index.html  update.html
task_manager/users/: forms.py  services.py  test.py  urls.py  views.py
