[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NevermoreKatana <grenkachannel@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "task_manager" },
]


[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
gunicorn = "^21.2.0"
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
