[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager – система управления задачами, подобная http://www.redmine.org/. Она позволяет ставить задачи, назначать исполнителей и менять их статусы. Для работы с системой требуется регистрация и аутентификация:"
authors = ["NevermoreKatana <grenkachannel@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "task_manager" },
]


[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.6"
gunicorn = "^21.2.0"
flake8 = "^4.0.1"
python-dotenv = "^1.0.0"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.3"
rollbar = "^0.16.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
